--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
             <div id = "container">
                 <div id = "cabecera">
                     Hyperblog
-                    <span id="tagline">Tu blog de confianza</span>
+                    <span id="tagline">Tu blog de maestro</span>
                 </div>
                 <div id = "post">
                     <h1> Este es el título atractivo e interesante del post</h1>
@@ -16,6 +16,7 @@
                         Mucho más que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. 
                         Pero estadísticamente no lo eres... Por ahora.
                     </p>
+                    <p>Suscríbete y dale like</p>
                 </div>
             </div>
         </body>
