--- a/blogpost.html
+++ b/blogpost.html
@@ -18,6 +18,9 @@
                     </p>
                     <p>Suscríbete y dale like</p>
                 </div>
+                <div id="footer">
+                    Hecho con amor en platzi 💚
+                </div>
             </div>
         </body>
     </head>
