--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Bienvenido a Hyperblog 2.0</title>
+        <title>Hyperblog 2.0 es un blog del futuro</title>
         <link rel="stylesheet" href="css/estilos.css" />
         <body>
             <div id = "container">
@@ -10,7 +10,7 @@
                     <span id="tagline">Tu blog de cabecera</span>
                 </div>
                 <div id = "post">
-                    <h1> Este es el título atractivo e interesante del post</h1>
+                    <h1> Aqu&iacute; inicia la historia de una gran proyecto</h1>
                     <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increibles que se 
                         pueden hacer con ramas</p>
                     <p>Los blogs son la mejor forma de compartir la información y tus ideas.
