Agregué la imagen a una url gratuita

--- a/blogpost.html
+++ b/blogpost.html
@@ -13,7 +13,8 @@
                     <h1> Aqu&iacute; inicia la historia de una gran proyecto</h1>
                     <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increibles que se 
                         pueden hacer con ramas</p>
-                    <p><img src="imagenes/fantasia.jpg" width="100%"></p>
+                    <!--<p><img src="imagenes/fantasia.jpg" width="100%"></p>-->
+                    <p><img src="https://imgur.com/EnuPBfC.jpg" width="100%" /></p>
                     <p>Los blogs son la mejor forma de compartir la información y tus ideas.
                         Mucho más que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. 
                         Pero estadísticamente no lo eres... Por ahora.
